@@ -29,7 +29,15 @@ public class Vala.TypeofExpression : Expression {
 	/**
 	 * The type to be retrieved.
 	 */
-	public DataType! type_reference { get; set construct; }
+	public DataType! type_reference {
+		get { return _data_type; }
+		set {
+			_data_type = value;
+			_data_type.parent_node = this;
+		}
+	}
+
+	private DataType _data_type;
 
 	/**
 	 * Creates a new typeof expression.
@@ -51,5 +59,11 @@ public class Vala.TypeofExpression : Expression {
 
 	public override bool is_pure () {
 		return true;
+	}
+
+	public override void replace_type (DataType! old_type, DataType! new_type) {
+		if (type_reference == old_type) {
+			type_reference = new_type;
+		}
 	}
 }
