@@ -1,3 +1,8 @@
+2007-12-03  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valasizeofexpression.vala, vala/valatypeofexpression.vala:
+	  implement replace_type for sizeof and typeof expressions
+
 2007-12-02  Jürg Billeter  <j@bitron.ch>
 
 	* vala/Makefile.am, vala/parser.y, vala/vala.h,
